[S14P21D204-95][BE] feat : 도전 세션 생성